Update dependencies to address security issues

--- a/package.json
+++ b/package.json
@@ -18,17 +18,17 @@
     "eslint-plugin-import": "^1.8.1",
     "eslint-plugin-jsx-a11y": "^1.5.3",
     "eslint-plugin-react": "^5.2.2",
-    "grunt": "0.4.5",
-    "grunt-apidoc": "0.10.1",
-    "grunt-cli": "0.1.13",
-    "grunt-contrib-clean": "0.7.0",
-    "grunt-contrib-jshint": "0.12.0",
-    "grunt-contrib-watch": "0.6.1",
-    "grunt-express-server": "0.5.1",
-    "grunt-mocha-test": "0.12.7",
-    "grunt-notify": "0.4.3",
+    "grunt": "1.0.3",
+    "grunt-apidoc": "0.11.0",
+    "grunt-cli": "1.3.2",
+    "grunt-contrib-clean": "2.0.0",
+    "grunt-contrib-jshint": "2.0.0",
+    "grunt-contrib-watch": "1.1.0",
+    "grunt-express-server": "0.5.4",
+    "grunt-mocha-test": "0.13.3",
+    "grunt-notify": "0.4.5",
     "load-grunt-tasks": "3.4.0",
-    "mocha": "^3.2.0",
+    "mocha": "5.2.0",
     "should": "^11.2.1",
     "nock": "^9.0.2",
     "superagent": "^3.3.1",
@@ -38,7 +38,7 @@
     "bluebird": "^3.4.7",
     "bunyan": "^1.8.5",
     "config": "^1.21.0",
-    "ct-register-microservice-node": "2.1.2",
+    "ct-register-microservice-node": "^2.1.6",
     "dotenv": "^5.0.0",
     "jsonapi-serializer": "2.1.1",
     "kcors": "^2.1.1",
